added code for finding wui type in home centriods

--- a/workflows/hiz/ouray_hiz.ipynb
+++ b/workflows/hiz/ouray_hiz.ipynb
@@ -223,195 +223,7 @@
     "**TO DO**: Does `counts_df` have geometries? Might need to add the extra step of appending that info to the footprint gdf. I think I ran this function in Gunnison so I should go look at those notebooks. \n",
     "\n",
     "## Step 3: Attributing WUI type to each home\n",
-    "---\n",
-    "\n",
-    "#### Creating a WUI type raster for Ouray County\n",
-    "Right now I have the raw tiles from SILVIS GLobal WUI. Two tiles are required to cover the entire county area. I downloaded the entire North America dataset and found the correct tiles to cover the area. These are the raw data used here. \n",
-    "\n",
-    "First let's import the tiles and preview their metadata."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3363980f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "arr1:  {'driver': 'GTiff', 'dtype': 'uint8', 'nodata': 255.0, 'width': 10000, 'height': 10000, 'count': 1, 'crs': CRS.from_wkt('PROJCS[\"Azimuthal_Equidistant\",GEOGCS[\"WGS 84\",DATUM[\"World Geodetic System 1984\",SPHEROID[\"WGS 84\",6378137,298.257223563]],PRIMEM[\"Greenwich\",0],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]]],PROJECTION[\"Azimuthal_Equidistant\"],PARAMETER[\"latitude_of_center\",52],PARAMETER[\"longitude_of_center\",-97.5],PARAMETER[\"false_easting\",8264722.17686],PARAMETER[\"false_northing\",4867518.35323],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]'), 'transform': Affine(10.0, 0.0, 7300000.0,\n",
-      "       0.0, -10.0, 3500000.0), 'blockysize': 1, 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}\n",
-      "arr2:  {'driver': 'GTiff', 'dtype': 'uint8', 'nodata': 255.0, 'width': 10000, 'height': 10000, 'count': 1, 'crs': CRS.from_wkt('PROJCS[\"Azimuthal_Equidistant\",GEOGCS[\"WGS 84\",DATUM[\"World Geodetic System 1984\",SPHEROID[\"WGS 84\",6378137,298.257223563]],PRIMEM[\"Greenwich\",0],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]]],PROJECTION[\"Azimuthal_Equidistant\"],PARAMETER[\"latitude_of_center\",52],PARAMETER[\"longitude_of_center\",-97.5],PARAMETER[\"false_easting\",8264722.17686],PARAMETER[\"false_northing\",4867518.35323],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]'), 'transform': Affine(10.0, 0.0, 7300000.0,\n",
-      "       0.0, -10.0, 3400000.0), 'blockysize': 1, 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Import Global WUI tiles\n",
-    "import rasterio as rio\n",
-    "import numpy as np\n",
-    "from utils.raster import read_raster\n",
-    "\n",
-    "# Read in arrays and extract metadata\n",
-    "wui1 = os.path.join(silvis_wui, 'X0073_Y0064', 'wui.tif')\n",
-    "wui2 = os.path.join(silvis_wui, 'X0073_Y0065', 'wui.tif')\n",
-    "\n",
-    "arr1, prof1 = read_raster(wui1, layer=1, profile=True)\n",
-    "arr2, prof2 = read_raster(wui2, layer=1, profile=True)\n",
-    "\n",
-    "# Preview metadata\n",
-    "print('arr1: ', prof1)\n",
-    "print('arr2: ', prof2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b72dc3a6",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "5ac547b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Projected CRS: PROJCS[\"NAD83_Conus_Albers\",GEOGCS[\"GCS_NAD83\",DAT ...>\n",
-       "Name: NAD83_Conus_Albers\n",
-       "Axis Info [cartesian]:\n",
-       "- [east]: Easting (metre)\n",
-       "- [north]: Northing (metre)\n",
-       "Area of Use:\n",
-       "- undefined\n",
-       "Coordinate Operation:\n",
-       "- name: unnamed\n",
-       "- method: Albers Equal Area\n",
-       "Datum: North American Datum 1983\n",
-       "- Ellipsoid: GRS 1980\n",
-       "- Prime Meridian: Greenwich"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c036fdd9",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "839a08be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22f3a641",
-   "metadata": {},
-   "source": [
-    "### Clip WUI rasters to Analysis Area (county boundary) - put this section in raster_prep.ipynb\n",
-    "\n",
-    "Now we're going to clip the WUI rasters to the county boundary, setting values to nodata where county_boundary_raster == 0. The county boundary will be the snap raster and the source of truth for raster extent."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6b6bf41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Reproject WUI rasters to same CRS as county boundary\n",
-    "# NOTE: make sure it's also the same CRS as the homes\n",
-    "import rasterio\n",
-    "from rasterio.mask import mask\n",
-    "from rasterio.warp import transform_geom\n",
-    "import geopandas as gpd\n",
-    "import numpy as np\n",
-    "\n",
-    "# Paths to your files\n",
-    "raster_path = 'path/to/your/raster.tif'\n",
-    "vector_path = 'path/to/your/vector_boundary.shp'\n",
-    "output_path = 'path/to/output/clipped_raster.tif'\n",
-    "\n",
-    "# Set desired nodata value\n",
-    "nodata_value = 255\n",
-    "\n",
-    "# Step 1: Read vector boundary and reproject to raster CRS\n",
-    "vector = gpd.read_file(vector_path)\n",
-    "\n",
-    "# Open the raster to get its CRS\n",
-    "with rasterio.open(raster_path) as src:\n",
-    "    raster_crs = src.crs\n",
-    "\n",
-    "# Reproject vector boundary to match raster CRS\n",
-    "vector_reprojected = vector.to_crs(raster_crs)\n",
-    "\n",
-    "# Step 2: Clip the raster using the reprojected vector geometry\n",
-    "geometries = [geom.__geo_interface__ for geom in vector_reprojected.geometry]\n",
-    "\n",
-    "# Open raster and clip\n",
-    "with rasterio.open(raster_path) as src:\n",
-    "    # Perform the clipping\n",
-    "    clipped_raster, clipped_transform = mask(src, geometries, crop=True, nodata=nodata_value)\n",
-    "    \n",
-    "    # Update the metadata\n",
-    "    clipped_meta = src.meta.copy()\n",
-    "    clipped_meta.update({\n",
-    "        \"driver\": \"GTiff\",\n",
-    "        \"height\": clipped_raster.shape[1],\n",
-    "        \"width\": clipped_raster.shape[2],\n",
-    "        \"transform\": clipped_transform,\n",
-    "        \"nodata\": nodata_value\n",
-    "    })\n",
-    "\n",
-    "# Step 3: Replace values outside the mask (optional but ensures consistency)\n",
-    "clipped_raster = np.where(clipped_raster == nodata_value, nodata_value, clipped_raster)\n",
-    "\n",
-    "# Step 4: Save the clipped raster\n",
-    "with rasterio.open(output_path, 'w', **clipped_meta) as dst:\n",
-    "    dst.write(clipped_raster)\n",
-    "\n",
-    "print(f\"Clipped raster saved to: {output_path}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c75cb811",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from utils.raster import clip_raster\n",
-    "\n",
-    "wui = clip_raster()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "018e99ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save new WUI array to file\n",
-    "from utils.raster import write_raster\n",
-    "\n",
-    "write_raster()"
+    "---"
    ]
   },
   {
@@ -421,7 +233,24 @@
    "source": [
     "### Get WUI raster values per home\n",
     "\n",
-    "Now that we have the WUI rasters clipped and in the right CRS, we're going to find the value of the raster at the centriod of each home. Those values will be appended to the HIZ geodataframe."
+    "I created a SILVIS WUI raster in `raster_prep.ipynb`, located in this repository. Now we will import the raster to the workspace as well as the building footprints. Then we're going to find the value of the raster at the centriod of each home. Those values will be appended to the HIZ geodataframe.\n",
+    "\n",
+    "Note that I will import the raster that is not clipped to the analysis area. This is because the AA does not encompass all of the building footprints. We won't be able to get LiDAR data for the homes outside the AA, but at least we can append the WUI info."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "306c2b5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import data\n",
+    "from utils.raster import read_raster\n",
+    "import geopandas as gpd\n",
+    "\n",
+    "wui = read_raster('path.tif', layer=1)\n",
+    "homes = gpd.read_file('path.gpkg')"
    ]
   },
   {
@@ -431,7 +260,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write a function to do get the centriod of each geometry and get the raster value at the centriod"
+    "# Write a function to do get the centriod of each geometry and get the raster value at the centriod\n",
+    "import rasterio as rio\n",
+    "import numpy as np\n",
+    "\n",
+    "with rio.open('path.tif') as src:\n",
+    "    # Extract geometry centroids from homes\n",
+    "    centroids = homes.geometry.centroid\n",
+    "    # Convert centroids to xy coords and store in list\n",
+    "    points = [(geom.x, geom.y) for geom in centroids]\n",
+    "    # Sample raster values at centroids\n",
+    "    wui_values = [val[0] for val in src.sample(points)]"
    ]
   },
   {
@@ -441,7 +280,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Append values to gdf\n"
+    "# Append values to gdf\n",
+    "homes['WUI'] = wui_values"
    ]
   },
   {
@@ -451,7 +291,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save gdf to file"
+    "# Save gdf to file\n",
+    "homes.to_file('path.gpkg', index=False)"
    ]
   },
   {
@@ -563,271 +404,6 @@
     "print('ladder: ', ladder_profile)\n",
     "print('density: ', density_profile)\n",
     "print('zentropy: ', zentropy_profile)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9f99d791",
-   "metadata": {},
-   "source": [
-    "### put this section in raster_prep.ipynb!\n",
-    "\n",
-    "The metadata of these rasters needs updating. For instance, we can change the dtype on many of these rasters to save space and processing speed. To do that, we will have to solve for the nodata value as nan, since that requires a float dtype. Ladder fuels are a binary raster."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dc23708c",
-   "metadata": {},
-   "source": [
-    "We want the CRS and shape of these rasters to match the CRS and shape of the buildings and the county raster. So let's do some raster cleanup and make these changes accordingly."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb46e68b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Code as necessary"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6a1a0c66",
-   "metadata": {},
-   "source": [
-    "Now let's plot the rasters to see what they look like"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d32dd1e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot all 4 rasters in 2x2 subplots\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1ededcca-8f00-45e0-8717-6eb0f409fe06",
-   "metadata": {},
-   "source": [
-    "Notice the missing pixel values seen in the plot. I fill these in with a 3x3 moving window that fills in missing values with the average value of the 8 surrounding pixels."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "02302565-be17-4f1a-a539-dc7cfd23026b",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Creating a window required a few steps. First, defining what the window does. I call this function `fill_nan`. I use `generic_filter` from the `scipy` library, which does this automatically, providing three arguments: the **array** to filter, the **function** of the window, and the **size** of the window. Optionally, we can set **mode** based on how we want to treat pixels outside of the array. Let's stick with the default *reflect*. You can read more about options here: [https://docs.scipy.org/doc/scipy/reference/generated/scipy.ndimage.generic_filter.html]\n",
-    "\n",
-    "### Fill in missing values - put this section in raster_prep.ipynb\n",
-    "\n",
-    "#### Canopy Cover 0-2m\n",
-    "\n",
-    "**TO DO:** This code needs cleaned up so that it uses the class I created, or maybe I just need to simplify things by breaking down the class into a function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26a0853e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fill NaN values with moving window\n",
-    "from scipy.ndimage import generic_filter\n",
-    "from utils.raster import FillNaN # NOTE: am I importing this class correctly?\n",
-    "\n",
-    "# Apply the moving window function to fill missing values in cc0_2\n",
-    "window_size = (3, 3)\n",
-    "arr_max = generic_filter(arr_hmax, fill_nan, size=window_size, mode='reflect')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43b1fa57",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Preview to ensure quality\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.imshow(cc0_2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3319371a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save array, overwriting\n",
-    "from utils.raster import write_raster\n",
-    "\n",
-    "write_raster('file/path/raster.tif')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1d688c28",
-   "metadata": {},
-   "source": [
-    "#### Canopy Cover 2-4m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f931429",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fill NaN values with moving window\n",
-    "from scipy.ndimage import generic_filter\n",
-    "from utils.raster import FillNaN # NOTE: am I importing this class correctly?\n",
-    "\n",
-    "# Apply the moving window function to fill missing values in cc2_4\n",
-    "window_size = (3, 3)\n",
-    "arr_max = generic_filter(arr_hmax, fill_nan, size=window_size, mode='reflect')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b753a9c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Preview to ensure quality\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.imshow(cc2_4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb6c2f22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save array, overwriting\n",
-    "from utils.raster import write_raster\n",
-    "\n",
-    "write_raster('file/path/raster.tif')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e1c3054a",
-   "metadata": {},
-   "source": [
-    "#### Canopy Cover 4-8m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "705ff0fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fill NaN values with moving window\n",
-    "from scipy.ndimage import generic_filter\n",
-    "from utils.raster import FillNaN # NOTE: am I importing this class correctly?\n",
-    "\n",
-    "# Apply the moving window function to fill missing values in cc4_8\n",
-    "window_size = (3, 3)\n",
-    "arr_max = generic_filter(arr_hmax, fill_nan, size=window_size, mode='reflect')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96ad75a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Preview to ensure quality\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.imshow(cc4_8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6332dd15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save array, overwriting\n",
-    "from utils.raster import write_raster\n",
-    "\n",
-    "write_raster('file/path/raster.tif')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83142a8e",
-   "metadata": {},
-   "source": [
-    "#### Canopy Cover 8m+"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39264af6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fill NaN values with moving window\n",
-    "from scipy.ndimage import generic_filter\n",
-    "from utils.raster import FillNaN # NOTE: am I importing this class correctly?\n",
-    "\n",
-    "# Apply the moving window function to fill missing values in cc_8\n",
-    "window_size = (3, 3)\n",
-    "arr_max = generic_filter(arr_hmax, fill_nan, size=window_size, mode='reflect')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84ef21fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Preview to ensure quality\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.imshow(cc_8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72ea1ba5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save array, overwriting\n",
-    "from utils.raster import write_raster\n",
-    "\n",
-    "write_raster('file/path/raster.tif')"
    ]
   },
   {
@@ -1165,7 +741,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "parcel",
    "language": "python",
    "name": "python3"
   },
@@ -1179,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
