code prep and setup complete

--- a/workflows/analysis/data_exploration.ipynb
+++ b/workflows/analysis/data_exploration.ipynb
@@ -103,8 +103,7 @@
     "\n",
     "# Create boxen plots for each variable in the grid\n",
     "for i, variable in enumerate(variables):\n",
-    "    sns.boxenplot(x=train[variable], ax=axes[i])\n",
-    "    axes[i].set_title(f'Boxen Plot for {variable}')\n",
+    "    sns.boxplot(x=train[variable], ax=axes[i])\n",
     "    axes[i].set_xlabel(variable)\n",
     "\n",
     "# Adjust layout\n",
@@ -208,7 +207,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Variable correlations - correlation heat map with numbers\n",
+    "X = train[['f1','f2','f3','f4','f5','f6','f7','f8','f9','f10',\n",
+    "          'f11','f12','f13','f14','f15','f16','f17','f18','f19','f20']]\n",
+    "y = train[['target']].copy()\n",
+    "\n",
+    "# Compute the correlation matrix\n",
+    "corr = X.corr()\n",
+    "\n",
+    "# Set up the matplotlib figure\n",
+    "plt.figure(figsize=(12, 10))\n",
+    "\n",
+    "# Create a heatmap with correlation coefficients\n",
+    "sns.heatmap(corr, annot=True, cmap='coolwarm', fmt=\".2f\", vmin=-1, vmax=1)\n",
+    "plt.title('Correlation Heatmap with Coefficients')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
