--- a/workflows/analysis/risk_pred.ipynb
+++ b/workflows/analysis/risk_pred.ipynb
@@ -5,19 +5,131 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Risk Prediction - Ouray County Parcvel Risk\n",
+    "# Risk Prediction - Ouray County Parcel Risk\n",
     "**Author:** Bryce A Young  \n",
     "**Created:** 2025-01-17 | \n",
-    "**Modified:** 2025-01-17  \n",
+    "**Modified:** 2025-01-21  \n",
     "\n",
     "#### Overview\n",
-    "This notebook trains and tests various supervized machine learning models to predict home risk scores. For each model, we explore and tune the parameters to minimize loss, and we analyze the suitability of each model."
+    "This notebook trains and tests various supervized machine learning models to predict home risk scores. For each model, we explore and tune the parameters to minimize loss, and we analyze the suitability of each model.\n",
+    "\n",
+    "#### Random Forest classifier\n",
+    "We will split the data into training, validation, and testing. We will create a random forest classifier and train it then test on val data while tuning the model params. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predicitons with Random Forest\n",
+    "# CREATE A TRAIN-TEST SPLIT AND FIT A RF CLASSIFIER\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# Select predictors and target variable\n",
+    "predictors = df[['predictor_column1', 'predictor_column2', 'predictor_column3']]\n",
+    "target = df['RISK.SCORE']\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(predictors, target, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Create a random forest classifier\n",
+    "rf_classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "\n",
+    "# Fit the model on the training data\n",
+    "rf_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "y_pred = rf_classifier.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy:.2f}')\n",
+    "\n",
+    "# Print classification report\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's create a confusion matrix of prediction labels and true labels and plot it in a heat map to visualize how close we came."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will get precision, recall and f1 score for each class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's produce an ROC curve for each class in the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ordinal analysis\n",
+    "Let's convert the target variable to ordinal. Then we can create a confusion matrix and extract the cumulative metrics. Then we extract the cumulative precision across ordinal classes.\n",
+    "\n",
+    "We can also try to fit an ordinal logistic regression model."
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "parcel",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
